<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nnotes"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/nnotes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:id="@+id/ntime"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/ntime"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <Button
        android:id="@+id/timepicker"
        style="@android:style/Widget.Spinner"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:onClick="openTimePicker"
        android:text="@string/defaulttime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/nschedname2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/nschedname2"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/ndate"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/nschedname"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/nname"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/inName"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=" "
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toEndOf="@+id/nschedname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/datepicker"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:text="Date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/nschedname2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326"
        style="@android:style/Widget.Spinner"
        android:onClick="opendatePicker"/>

    <EditText
        android:id="@+id/noteset"
        android:layout_width="324dp"
        android:layout_height="198dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textShortMessage|textLongMessage|textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nnotes"
        app:layout_constraintVertical_bias="0.0"
        android:hint="Additional Information Here"/>

    <Button
        android:id="@+id/dbutton"
        android:layout_width="213dp"
        android:layout_height="47dp"
        android:text="@string/saveNew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

</androidx.constraintlayout.widget.ConstraintLayout>